--- a/styles/font.css
+++ b/styles/font.css
@@ -38,7 +38,7 @@
   font-family: 'Open Sans';
   font-style: normal;
   font-weight: 800;
-  src: url('../assets/fonts/open-sans-v40-latin-800.woff2') format('woff2');
+  src: url('./assets/fonts/open-sans-v40-latin-800.woff2') format('woff2');
   /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
 
