--- a/style.css
+++ b/style.css
@@ -45,21 +45,8 @@ main {
     width: calc(100% - 300px);
 }
 
-.content h2{
+.content h2 {
     padding-left: 2%;
-}
-
-.basket_wrapper {
-    width: 300px;
-    flex-grow: 1;
-    /* position: relative; */
-}
-
-.basket {
-    width: 100%;
-    height: 400px;
-    position: sticky;
-    top: 10px;
 }
 
 .pizza_oven_img {
@@ -69,23 +56,23 @@ main {
     display: block;
 }
 
-.pizza_center{
+.pizza_center {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: -70px;
+    margin-top: -80px;
 }
 
 .round_pizza_img {
-    width: 140px;
-    height: 140px;
+    width: 160px;
+    height: 160px;
     border: #E8E8E8 2px solid;
     object-fit: cover;
     display: block;
     border-radius: 50%;
 }
 
-.restaurant_info{
+.restaurant_info {
     display: flex;
     flex-direction: column;
     margin-top: -70px;
@@ -93,11 +80,11 @@ main {
 }
 
 .restaurant_info h1 {
-    font-size: 1.8em;
+    font-size: 2em;
     padding: 24px 0 24px 0;
 }
 
-.restaurant_info a{
+.restaurant_info a {
     color: #FF8000;
     padding-bottom: 24px;
 }
@@ -119,13 +106,23 @@ main {
     width: auto;
 }
 
-.selection p {
+.selection a {
     font-size: 20px;
     font-weight: 800;
     color: #868888;
 }
 
-.food_img{
+.food_container {
+    display: flex;
+    height: 160px;
+    justify-content: space-between;
+    margin-top: 24px;
+    margin-bottom: 24px;
+    margin-left: 2%;
+    border: #868888 1px solid;
+}
+
+.food_img {
     width: 100%;
     height: 160px;
     object-fit: cover;
@@ -133,21 +130,115 @@ main {
     padding-left: 2%;
 }
 
-.food_container {
+.food_item {
     display: flex;
-    flex-direction: column;
-    height: 160px;
-    justify-content: space-evenly;
-    padding: 0 2%;
-    margin-top: 24px;
-    margin-bottom: 24px;
-    margin-left: 2%;
-    border: #868888 1px solid;
 }
 
-.test{
-    height: 24px;
-    width: auto;
+.inner_food_img {
+    width: 160px;
+    height: 160px;
+    object-fit: cover;
+    display: block;
+}
+
+.food_text {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    padding-left: 16px;
+}
+
+.orange {
+    color: #FF8000;
+    font-weight: bold;
+}
+
+.big_plus_container {
+    height: 48px;
+    width: 48px;
+    border-left: #868888 1px solid;
+    border-bottom: #868888 1px solid;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.big_plus {
+    height: 32px;
+    width: 32px;
+}
+
+.basket_wrapper {
+    width: 300px;
+    flex-grow: 1;
+    /* position: relative; */
+    box-shadow: -4px 0px 8px rgba(0, 0, 0, 0.2);
+}
+
+.basket {
+    width: 100%;
+    height: 400px;
+    position: sticky;
+    top: 0px;
+}
+
+.basket h1 {
+    font-size: 2em;
+    text-align: center;
+    border-bottom: #868888 1px solid;
+    padding: 16px 0 16px 0;
+}
+
+.basket_item {
+    display: flex;
+    flex-direction: column;
+    border-bottom: #868888 1px solid;
+    padding: 16px 0 16px 0;
+}
+
+.basket_item b {
+    padding-left: 2%;
+}
+
+.calc_zone {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.calc_icon {
+    height: 20px;
+    width: 20px;
+}
+
+.calc_icon:hover {
+    cursor: pointer;
+}
+
+.trash_icon {
+    height: 40px;
+    width: 40px;
+}
+
+.trash_icon:hover {
+    cursor: pointer;
+}
+
+.sum_container{
+    display: flex;
+    flex-direction: column;
+    padding: 16px 2% 16px 2%;
+    gap: 8px;
+}
+
+.sum{
+    display: flex;
+    justify-content: space-between;
+}
+
+.flex{
+    display: flex;
 }
 
 footer {
