--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@ main {
     margin-top: -80px;
 }
 
-.round_pizza_img {
+.round_logo {
     width: 160px;
     height: 160px;
     border: #E8E8E8 2px solid;
@@ -204,7 +204,7 @@ main {
 
 .basket {
     width: 100%;
-    height: 400px;
+    height: 500px;
     position: sticky;
     top: 0px;
 }
@@ -219,8 +219,6 @@ main {
 .basket_item {
     display: flex;
     flex-direction: column;
-    border-bottom: #868888 1px solid;
-    padding: 16px 0 16px 0;
 }
 
 .basket_item b {
@@ -254,13 +252,29 @@ main {
 .sum_container{
     display: flex;
     flex-direction: column;
-    padding: 16px 2% 16px 2%;
-    gap: 8px;
+    padding: 8px 2% 8px 2%;
+    border-top: #868888 1px solid;
+    gap: 4px;
 }
 
 .sum{
     display: flex;
     justify-content: space-between;
+}
+
+.order{
+    padding-top: 8px;
+    border-top: #868888 1px solid;
+}
+
+.order button{
+    width: 100%;
+    height: auto;
+    background-color: #FF8000;
+    font-weight: bold;
+    font-size: 16px;
+    border: #868888 2px solid;
+    color: white;
 }
 
 .flex{
