--- a/styles/assets.css
+++ b/styles/assets.css
@@ -3,11 +3,12 @@
     /* Hidden by default. Visible on click */
     min-width: 250px;
     /* Set a default minimum width */
+    max-width: 300px;
     margin-left: -125px;
     /* Divide value of min-width by 2 */
-    background-color: #333;
+    background-color: #FF8000;
     /* Black background color */
-    color: #fff;
+    color:  #FFFFFF;
     /* White text color */
     text-align: center;
     /* Centered text */
@@ -19,9 +20,9 @@
     /* Sit on top of the screen */
     z-index: 1;
     /* Add a z-index if needed */
-    left: 50%;
+    right: 0px;
     /* Center the snackbar */
-    top: 30px;
+    top: 258px;
     /* 30px from the bottom */
 }
 
@@ -43,7 +44,7 @@
     }
 
     to {
-        top: 30px;
+        top: 258px;
         opacity: 1;
     }
 }
@@ -55,14 +56,14 @@
     }
 
     to {
-        top: 30px;
+        top: 258px;
         opacity: 1;
     }
 }
 
 @-webkit-keyframes fadeout {
     from {
-        top: 30px;
+        top: 258px;
         opacity: 1;
     }
 
@@ -74,7 +75,7 @@
 
 @keyframes fadeout {
     from {
-        top: 30px;
+        top: 258px;
         opacity: 1;
     }
 
@@ -111,3 +112,43 @@ body {
                        var(--sb-track-color);
     }
   }
+
+  .cart_container {
+    direction: rtl;
+    height: 424px;
+
+    overflow-y: auto;
+    --sb-track-color: #EAE4E3;
+    --sb-thumb-color: #FF8000;
+    --sb-size: 4px;
+
+    margin: 8px 0 8px 1px;
+
+    display: flex;
+    flex-direction: column;
+}
+
+.cart_container > * {
+    direction: ltr;
+}
+
+.cart_container::-webkit-scrollbar {
+    width: var(--sb-size)
+}
+
+.cart_container::-webkit-scrollbar-track {
+    background: var(--sb-track-color);
+    border-radius: 2px;
+}
+
+.cart_container::-webkit-scrollbar-thumb {
+    background: var(--sb-thumb-color);
+    border-radius: 2px;
+
+}
+
+@supports not selector(::-webkit-scrollbar) {
+    .cart_container {
+        scrollbar-color: var(--sb-thumb-color) var(--sb-track-color);
+    }
+}
