--- a/styles/standard.css
+++ b/styles/standard.css
@@ -12,6 +12,7 @@ html,
 body {
     height: 100%;
     margin: 0;
+    /* overflow-x: hidden; */
 }
 
 body {
@@ -43,4 +44,8 @@ a:hover {
 
 b {
     font-weight: bolder;
+}
+
+.d_none {
+    display: none;
 }
