--- a/style.css
+++ b/style.css
@@ -39,10 +39,17 @@ main {
 
 .content_wrapper {
     display: flex;
+    transition: max-width 0.3s ease;
+    overflow-x: hidden;
 }
 
 .content {
     width: calc(100% - 300px);
+    transition: width 0.3s ease;
+}
+
+.basket_close .content {
+    width: 100%;
 }
 
 .content h2 {
@@ -127,7 +134,7 @@ main {
     margin-top: 24px;
     margin-bottom: 24px;
     margin-left: 2%;
-    
+
 
     display: grid;
     grid-template-columns: 1fr;
@@ -196,16 +203,40 @@ main {
 }
 
 .basket_wrapper {
+    position: sticky;
+    /* position: fixed; */
+    right: 0;
     width: 300px;
-    flex-grow: 1;
-    /* position: relative; */
+    /* flex-grow: 1; */
     box-shadow: -4px 0px 8px rgba(0, 0, 0, 0.2);
+    transition: transform 0.3s ease;
+    z-index: 1000;
+    /* pointer-events: auto;
+    opacity: 1; */
+}
+
+.basket_wrapper.fixed {
+    position: fixed;
+    top: 80;
+    right: 0;
+}
+
+.basket_wrapper.close {
+    transform: translateX(100%);
+    /* pointer-events: none;
+    opacity: 0; */
+}
+
+.basket_wrapper.scrolled {
+    position: fixed;
+    top: 0;
+    /* transition: margin-top 0.3s ease; */
 }
 
 .basket {
     width: 100%;
     height: 500px;
-    position: sticky;
+    /* position: sticky; */
     top: 0px;
 }
 
@@ -249,7 +280,7 @@ main {
     cursor: pointer;
 }
 
-.sum_container{
+.sum_container {
     display: flex;
     flex-direction: column;
     padding: 8px 2% 8px 2%;
@@ -257,17 +288,17 @@ main {
     gap: 4px;
 }
 
-.sum{
+.sum {
     display: flex;
     justify-content: space-between;
 }
 
-.order{
+.order {
     padding-top: 8px;
     border-top: #868888 1px solid;
 }
 
-.order button{
+.order button {
     width: 100%;
     height: auto;
     background-color: #FF8000;
@@ -277,7 +308,7 @@ main {
     color: white;
 }
 
-.flex{
+.flex {
     display: flex;
 }
 
