--- a/style.css
+++ b/style.css
@@ -40,11 +40,13 @@ main {
 .content_wrapper {
     display: flex;
     transition: max-width 0.3s ease;
+    transition: padding-right 0.3s ease;
     overflow-x: hidden;
 }
 
 .content {
     width: calc(100% - 300px);
+    will-change: transform;
     transition: width 0.3s ease;
 }
 
@@ -209,6 +211,7 @@ main {
     width: 300px;
     /* flex-grow: 1; */
     box-shadow: -4px 0px 8px rgba(0, 0, 0, 0.2);
+    will-change: transform;
     transition: transform 0.3s ease;
     z-index: 1000;
     /* pointer-events: auto;
@@ -223,6 +226,7 @@ main {
 
 .basket_wrapper.close {
     transform: translateX(100%);
+    transition: transform 0.1s ease;
     /* pointer-events: none;
     opacity: 0; */
 }
@@ -235,7 +239,7 @@ main {
 
 .basket {
     width: 100%;
-    height: 500px;
+    height: 480px;
     /* position: sticky; */
     top: 0px;
 }
