--- a/style.css
+++ b/style.css
@@ -172,6 +172,8 @@ main {
 .inner_food_img {
     width: 160px;
     height: 160px;
+    min-width: 160px;
+    min-height: 160px;
     object-fit: cover;
     display: block;
 }
@@ -226,7 +228,8 @@ main {
 
 .basket_wrapper.close {
     transform: translateX(100%);
-    transition: transform 0.1s ease;
+    /* transition: transform 0.1s ease; */
+
     /* pointer-events: none;
     opacity: 0; */
 }
@@ -336,4 +339,25 @@ footer a {
 footer a img {
     height: 24px;
     width: auto;
+}
+
+@media (max-width: 840px) {
+    /* .content_wrapper {
+        flex-direction: column;
+    }
+
+    .content {
+        width: 100%;
+    }
+
+    .basket_wrapper {
+        width: 100%;
+        position: relative;
+        top: 0;
+    }
+
+    .basket_wrapper.fixed {
+        position: relative;
+        top: 0;
+    } */
 }
