--- a/style.css
+++ b/style.css
@@ -50,11 +50,17 @@ main {
     transition: width 0.3s ease;
 }
 
-.basket_close .content {
-    width: 100%;
+.content h2 {
+    padding-left: 2%;
 }
 
-.content h2 {
+.full_content {
+    width: 100%;
+    will-change: transform;
+    transition: width 0.3s ease;
+}
+
+.full_content h2 {
     padding-left: 2%;
 }
 
@@ -120,16 +126,6 @@ main {
     font-weight: 600;
     color: #868888;
 }
-
-/* .food_container {
-    display: flex;
-    height: 160px;
-    justify-content: space-between;
-    margin-top: 24px;
-    margin-bottom: 24px;
-    margin-left: 2%;
-    border: #868888 1px solid;
-} */
 
 .food_container {
     height: auto;
@@ -211,6 +207,7 @@ main {
     /* position: fixed; */
     right: 0;
     width: 300px;
+    height: 480px;
     /* flex-grow: 1; */
     box-shadow: -4px 0px 8px rgba(0, 0, 0, 0.2);
     will-change: transform;
@@ -228,6 +225,7 @@ main {
 
 .basket_wrapper.close {
     transform: translateX(100%);
+    width: 0;
     /* transition: transform 0.1s ease; */
 
     /* pointer-events: none;
@@ -242,7 +240,7 @@ main {
 
 .basket {
     width: 100%;
-    height: 480px;
+    /* height: 480px; */
     /* position: sticky; */
     top: 0px;
 }
