--- a/style.css
+++ b/style.css
@@ -1,35 +1,4 @@
-header {
-    background-color: #FF8000;
-    top: 0;
-    left: 0;
-    right: 0;
-    height: 80px;
-    width: 100%;
 
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    flex-shrink: 0;
-}
-
-header a {
-    padding-left: 2%;
-}
-
-header a img {
-    height: 60px;
-    width: auto;
-}
-
-header img {
-    height: 24px;
-    width: auto;
-    padding-right: 2%;
-}
-
-header img:hover {
-    cursor: pointer;
-}
 
 main {
     display: flex;
@@ -41,7 +10,7 @@ main {
     display: flex;
     transition: max-width 0.3s ease;
     transition: padding-right 0.3s ease;
-    overflow-x: hidden;
+    overflow: hidden;
 }
 
 .content {
@@ -189,6 +158,8 @@ main {
 .big_plus_container {
     height: 48px;
     width: 48px;
+    min-height: 48px;
+    min-width: 48px;
     border-left: #868888 1px solid;
     border-bottom: #868888 1px solid;
 
@@ -242,7 +213,7 @@ main {
     width: 100%;
     /* height: 480px; */
     /* position: sticky; */
-    top: 0px;
+    top: 0;
 }
 
 .basket h1 {
@@ -317,45 +288,79 @@ main {
     display: flex;
 }
 
-footer {
-    background-color: #3D3D3D;
-    height: 100px;
-    width: 100%;
 
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    flex-shrink: 0;
-}
 
-footer a {
-    color: #FF8000;
-    text-decoration: none;
-}
+@media (max-width: 1000px) {
 
-footer a img {
-    height: 24px;
-    width: auto;
+    .restaurant_info {
+        margin-top: 0;
+    }
+
 }
 
 @media (max-width: 840px) {
-    /* .content_wrapper {
-        flex-direction: column;
+
+    .restaurant_info {
+        padding-right: 2%;
     }
 
-    .content {
-        width: 100%;
+    .food_img {
+        height: 120px;
+        padding-right: 2%;
+    }
+
+    .full_content h2 {
+        padding-right: 2%;
+    }
+
+    .food_container {
+        padding-right: 2%;
+    }
+
+    .inner_food_img {
+        width: 120px;
+        height: 120px;
+        min-width: 120px;
+        min-height: 120px;
+    }
+
+    .big_plus_container {
+        height: 40px;
+        width: 40px;
+        min-height: 40px;
+        min-width: 40px;
     }
 
     .basket_wrapper {
-        width: 100%;
-        position: relative;
-        top: 0;
+        position: fixed;
+        right: 2%;
+        left: 2%;
+        bottom: 160px;
+        width: 96%;
+        height: 320px;
+        background-color: white;
     }
 
-    .basket_wrapper.fixed {
-        position: relative;
-        top: 0;
-    } */
+    .basket_wrapper.scrolled {
+        position: fixed;
+        bottom: 160px;
+        top: auto;
+
+    }
+
+    .basket_wrapper.close {
+        transform: translateY(100%);
+        transition: margin-top 0.3s ease;
+    }
+
+    #toast {
+        top: 40px !important;
+        left: 50%;
+        transform: translateX(-50%);
+        right: auto !important;
+        margin-left: 0 !important;
+        z-index: 1000 !important;
+    }
+
+
 }
