--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-
-
 main {
     display: flex;
     flex: 1;
@@ -96,6 +94,11 @@ main {
     color: #868888;
 }
 
+.selection_text {
+    display: flex;
+    gap: 16px;
+}
+
 .food_container {
     height: auto;
     margin-top: 24px;
@@ -173,123 +176,6 @@ main {
     width: 32px;
 }
 
-.basket_wrapper {
-    position: sticky;
-    /* position: fixed; */
-    right: 0;
-    width: 300px;
-    height: 480px;
-    /* flex-grow: 1; */
-    box-shadow: -4px 0px 8px rgba(0, 0, 0, 0.2);
-    will-change: transform;
-    transition: transform 0.3s ease;
-    z-index: 1000;
-    /* pointer-events: auto;
-    opacity: 1; */
-}
-
-.basket_wrapper.fixed {
-    position: fixed;
-    top: 80;
-    right: 0;
-}
-
-.basket_wrapper.close {
-    transform: translateX(100%);
-    width: 0;
-    /* transition: transform 0.1s ease; */
-
-    /* pointer-events: none;
-    opacity: 0; */
-}
-
-.basket_wrapper.scrolled {
-    position: fixed;
-    top: 0;
-    /* transition: margin-top 0.3s ease; */
-}
-
-.basket {
-    width: 100%;
-    /* height: 480px; */
-    /* position: sticky; */
-    top: 0;
-}
-
-.basket h1 {
-    font-size: 2em;
-    text-align: center;
-    border-bottom: #868888 1px solid;
-    padding: 16px 0 16px 0;
-}
-
-.basket_item {
-    display: flex;
-    flex-direction: column;
-}
-
-.basket_item b {
-    padding-left: 2%;
-}
-
-.calc_zone {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-}
-
-.calc_icon {
-    height: 20px;
-    width: 20px;
-}
-
-.calc_icon:hover {
-    cursor: pointer;
-}
-
-.trash_icon {
-    height: 40px;
-    width: 40px;
-}
-
-.trash_icon:hover {
-    cursor: pointer;
-}
-
-.sum_container {
-    display: flex;
-    flex-direction: column;
-    padding: 8px 2% 8px 2%;
-    border-top: #868888 1px solid;
-    gap: 4px;
-}
-
-.sum {
-    display: flex;
-    justify-content: space-between;
-}
-
-.order {
-    padding-top: 8px;
-    border-top: #868888 1px solid;
-}
-
-.order button {
-    width: 100%;
-    height: auto;
-    background-color: #FF8000;
-    font-weight: bold;
-    font-size: 16px;
-    border: #868888 2px solid;
-    color: white;
-}
-
-.flex {
-    display: flex;
-}
-
-
-
 @media (max-width: 1000px) {
 
     .restaurant_info {
@@ -330,37 +216,60 @@ main {
         min-height: 40px;
         min-width: 40px;
     }
+}
 
-    .basket_wrapper {
-        position: fixed;
-        right: 2%;
-        left: 2%;
-        bottom: 160px;
-        width: 96%;
-        height: 320px;
-        background-color: white;
+@media (max-width: 500px) {
+
+    .selection {
+        height: auto;
+        justify-content: space-evenly;
     }
 
-    .basket_wrapper.scrolled {
-        position: fixed;
-        bottom: 160px;
-        top: auto;
-
+    .selection_text {
+        flex-direction: column;
+        gap: 16px;
     }
 
-    .basket_wrapper.close {
-        transform: translateY(100%);
-        transition: margin-top 0.3s ease;
+    .selection img {
+        height: 64px;
+        width: auto;
     }
 
-    #toast {
-        top: 40px !important;
-        left: 50%;
-        transform: translateX(-50%);
-        right: auto !important;
-        margin-left: 0 !important;
-        z-index: 1000 !important;
+}
+
+@media (max-width: 430px) {
+
+    .food_img {
+        height: 180px;
+        padding-right: 2%;
+        padding-top: 32px;
     }
 
+    .food_item {
+        flex-direction: column;
+        align-items: flex-end;
+    }
+
+    .food_item_container {
+        flex-direction: column;
+    }
+
+    .inner_food_img {
+        width: 100%;
+        height: 80px;
+        min-width: 100%;
+        min-height: 80px;
+    }
+
+    .food_text {
+        padding-left: 2%;
+    }
+
+    .big_plus_container {
+        border-top: #868888 1px solid;
+        border-left: #868888 1px solid;
+        border-bottom: unset;
+        margin-top: -40px;
+    }
 
 }
