--- a/styles/cart.css
+++ b/styles/cart.css
@@ -64,18 +64,129 @@
     height: 120px;
     background-color: #0573E1;
     font-weight: bold;
-    font-size: 48px;
+    font-size: 40px;
     border: #868888 2px solid;
     color: white;
     z-index: 1000;
 }
 
 .cart_button.shrink {
-    bottom: 88px;
-    height: 40px;
+    bottom: 104px;
+    height: 32px;
     width: 96%;
-    font-size: 14px;
-    padding: 10px;
+    font-size: 18px;
+}
+
+
+.basket_wrapper {
+    position: sticky;
+    /* position: fixed; */
+    right: 0;
+    width: 300px;
+    height: 480px;
+    /* flex-grow: 1; */
+    box-shadow: -4px 0px 8px rgba(0, 0, 0, 0.2);
+    will-change: transform;
+    transition: transform 0.3s ease;
+    z-index: 1000;
+    /* pointer-events: auto;
+    opacity: 1; */
+}
+
+.basket_wrapper.fixed {
+    position: fixed;
+    top: 80;
+    right: 0;
+}
+
+.basket_wrapper.close {
+    transform: translateX(100%);
+    width: 0;
+    /* transition: transform 0.1s ease; */
+
+    /* pointer-events: none;
+    opacity: 0; */
+}
+
+.basket_wrapper.scrolled {
+    position: fixed;
+    top: 0;
+    /* transition: margin-top 0.3s ease; */
+}
+
+.basket {
+    width: 100%;
+    /* height: 480px; */
+    /* position: sticky; */
+    top: 0;
+}
+
+.basket h1 {
+    font-size: 2em;
+    text-align: center;
+    border-bottom: #868888 1px solid;
+    padding: 16px 0 16px 0;
+}
+
+.basket_item {
+    display: flex;
+    flex-direction: column;
+}
+
+.basket_item b {
+    padding-left: 2%;
+}
+
+.calc_zone {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.calc_icon {
+    height: 20px;
+    width: 20px;
+}
+
+.calc_icon:hover {
+    cursor: pointer;
+}
+
+.trash_icon {
+    height: 40px;
+    width: 40px;
+}
+
+.trash_icon:hover {
+    cursor: pointer;
+}
+
+.sum_container {
+    display: flex;
+    flex-direction: column;
+    padding: 8px 2% 8px 2%;
+    border-top: #868888 1px solid;
+    gap: 4px;
+}
+
+.sum {
+    display: flex;
+    justify-content: space-between;
+}
+
+.order {
+    padding-top: 8px;
+    border-top: #868888 1px solid;
+}
+
+.order button {
+    width: 100%;
+    height: auto;
+    background-color: #FF8000;
+    font-weight: bold;
+    font-size: 16px;
+    border: #868888 2px solid;
+    color: white;
 }
 
 @media (max-width: 840px) {
@@ -86,6 +197,47 @@
 
     .empty_cart {
         height: 164px;
+    }
+
+    .basket_wrapper {
+        position: fixed;
+        right: 2%;
+        left: 2%;
+        bottom: 160px;
+        width: 96%;
+        height: 320px;
+        background-color: white;
+    }
+
+    .basket_wrapper.scrolled {
+        position: fixed;
+        bottom: 160px;
+        top: auto;
+
+    }
+
+    .basket_wrapper.close {
+        transform: translateY(200%);
+        transition: margin-top 0.3s ease;
+    }
+
+    .empty_cart img {
+        height: 120px;
+    }
+}
+
+@media (max-width: 430px) {
+
+    .cart_button {
+        height: 80px;
+        font-size: 32px;
+    }
+
+    .basket_wrapper.scrolled {
+        position: fixed;
+        bottom: 120px;
+        top: auto;
+
     }
 
 }
