--- a/styles/header_footer.css
+++ b/styles/header_footer.css
@@ -35,6 +35,7 @@ footer {
     background-color: #3D3D3D;
     height: 100px;
     width: 100%;
+    margin-top: 16px;
 
     display: flex;
     flex-direction: column;
