--- a/styles/reviews.css
+++ b/styles/reviews.css
@@ -5,7 +5,7 @@
     /* Set a default minimum width */
     margin-left: -125px;
     /* Divide value of min-width by 2 */
-    background-color: #333;
+    background-color: #FF8000;
     /* Black background color */
     color: #fff;
     /* White text color */
@@ -21,7 +21,7 @@
     /* Add a z-index if needed */
     left: 50%;
     /* Center the snackbar */
-    top: 30px;
+    top: 304px;
     /* 30px from the bottom */
 }
 
@@ -31,8 +31,8 @@
     /* Show the snackbar */
     /* Add animation: Take 0.5 seconds to fade in and out the snackbar.
     However, delay the fade out process for 2.5 seconds */
-    -webkit-animation: fadein 0.5s, fadeout 0.5s 2.5s;
-    animation: fadein 0.5s, fadeout 0.5s 2.5s;
+    -webkit-animation: fadein 0.5s, fadeout 0.5s 2.6s;
+    animation: fadein 0.5s, fadeout 0.5s 2.6s;
 }
 
 /* Animations to fade the snackbar in and out */
@@ -43,7 +43,7 @@
     }
 
     to {
-        top: 30px;
+        top: 304px;
         opacity: 1;
     }
 }
@@ -55,14 +55,14 @@
     }
 
     to {
-        top: 30px;
+        top: 304px;
         opacity: 1;
     }
 }
 
 @-webkit-keyframes fadeout {
     from {
-        top: 30px;
+        top: 304px;
         opacity: 1;
     }
 
@@ -74,7 +74,7 @@
 
 @keyframes fadeout {
     from {
-        top: 30px;
+        top: 304px;
         opacity: 1;
     }
 
